[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/Ground/ColoredPolygon_Circle.gd" type="Script" id=1]
[ext_resource path="res://scripts/Ground/BG_polygons.gd" type="Script" id=2]
[ext_resource path="res://scripts/Ground/ColoredPolygon_Poly.gd" type="Script" id=3]
[ext_resource path="res://scripts/Ground/ColoredPolygon_Rectangle.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Interface_scenes/Shader.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Levels/level_11.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Levels/inside_levels/level_10/Boss_1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/global/CheckPoint.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Interface_scenes/Game_HUD.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/exit_portal.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/global/in_portal.tscn" type="PackedScene" id=17]
[ext_resource path="res://scripts/Ground/BG_polygons_levels.gd" type="Script" id=18]
[ext_resource path="res://Scenes/Levels/inside_levels/level_1/door.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/Levels/inside_levels/level_10/cables.gd" type="Script" id=20]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 400, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 228, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 8 )

[sub_resource type="Curve" id=4]
max_value = 2.5
_data = [ Vector2( 0, 2.5 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.22727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 45.9457 )

[sub_resource type="Animation" id=6]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 17.3043, -181.566 ), Vector2( 99.3043, -181.566 ) ]
}

[node name="level_001" type="Node"]

[node name="BG_polygons" type="Node2D" parent="."]
visible = false
z_index = -10
script = ExtResource( 18 )

[node name="blank" type="Polygon2D" parent="BG_polygons" groups=[
"bg_back",
]]
color = Color( 0.254902, 0.254902, 0.254902, 1 )
polygon = PoolVector2Array( 560, -424, 632, -352, 632, -152, 576, -100, 84, -100, 8, -172, 8, -356, 76, -424, 280, -424, 280, -488, 360, -488, 364, -424 )

[node name="light2" type="Polygon2D" parent="BG_polygons" groups=[
"bg_mid",
]]
color = Color( 0.196078, 0.196078, 0.196078, 1 )
polygon = PoolVector2Array( 560, -192, 560, -312, 520, -352, 120, -352, 80, -312, 80, -212, 116, -176, 544, -176, 560, -192, 560, -136, 52, -132, 56, -396, 600, -392, 588, -136, 560, -136 )

[node name="dark2" type="Polygon2D" parent="BG_polygons" groups=[
"bg_front",
]]
color = Color( 0.172549, 0.172549, 0.172549, 1 )
polygon = PoolVector2Array( 576, -180, 576, -324, 532, -368, 108, -368, 64, -324, 64, -200, 104, -160, 556, -160, 576, -180, 576, -128, 32, -128, 32, -408, 620, -408, 620, -128, 576, -128 )

[node name="light" type="Polygon2D" parent="BG_polygons" groups=[
"bg_mid",
]]
color = Color( 0.196078, 0.196078, 0.196078, 1 )
polygon = PoolVector2Array( 568, -144, 592, -168, 592, -336, 544, -384, 96, -384, 48, -336, 48, -188, 96, -144, 568, -144, 568, -104, 12, -104, 8, -424, 632, -424, 632, -104, 568, -104 )

[node name="dark" type="Polygon2D" parent="BG_polygons" groups=[
"bg_front",
]]
color = Color( 0.172549, 0.172549, 0.172549, 1 )
polygon = PoolVector2Array( 576, -128, 608, -160, 608, -344, 552, -400, 88, -400, 32, -344, 32, -184, 88, -128, 576, -128, 576, -104, 8, -100, 12, -424, 632, -420, 632, -104, 576, -104 )

[node name="dark3" type="Polygon2D" parent="BG_polygons" groups=[
"bg_front",
]]
color = Color( 0.172549, 0.172549, 0.172549, 1 )
polygon = PoolVector2Array( 360, -492, 360, -412, 280, -412, 280, -492 )

[node name="noor" type="Polygon2D" parent="BG_polygons" groups=[
"bg_light",
]]
color = Color( 1, 1, 1, 0.117647 )
polygon = PoolVector2Array( 432, -416, 496, -416, 576, -104, 352, -104 )

[node name="noor2" type="Polygon2D" parent="BG_polygons" groups=[
"bg_light",
]]
color = Color( 1, 1, 1, 0.117647 )
polygon = PoolVector2Array( 208, -416, 288, -96, 64, -96, 144, -416 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 111

[node name="Game_HUD" parent="CanvasLayer" instance=ExtResource( 13 )]

[node name="Shader" parent="." instance=ExtResource( 5 )]

[node name="player" parent="." instance=ExtResource( 9 )]

[node name="PlayerRigidBody" parent="player" index="1"]
position = Vector2( 588, -144 )

[node name="Ground" type="Node2D" parent="."]

[node name="StaticBodyRect" type="StaticBody2D" parent="Ground"]
collision_layer = 68
collision_mask = 64
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 260.406, -104.667 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 60, -424 )
shape = SubResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 280, -464 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 596, -388 )
rotation = 0.785398
shape = SubResource( 3 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 44, -140 )
rotation = 0.785398
shape = SubResource( 3 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 44, -392 )
rotation = 2.35619
shape = SubResource( 3 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 608, -132 )
rotation = 2.35619
shape = SubResource( 3 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 360, -464 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 320, -488 )
shape = SubResource( 3 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 580, -424 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 8, -252 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Ground/StaticBodyRect"]
position = Vector2( 632, -232 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="StaticBodyCircle" type="StaticBody2D" parent="Ground"]
collision_layer = 68
collision_mask = 68
script = ExtResource( 1 )

[node name="StaticBodypoly" type="StaticBody2D" parent="Ground"]
collision_layer = 68
collision_mask = 68
script = ExtResource( 3 )

[node name="FG_polygons" type="Node2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="black" type="Polygon2D" parent="FG_polygons"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 560, -428, 632, -352, 632, -152, 580, -104, 580, -32, 728, -28, 732, -512, 560, -508 )

[node name="black2" type="Polygon2D" parent="FG_polygons"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 636, -104, 640, -28, -96, -32, -96, -160, 32, -156, 72, -104 )

[node name="black3" type="Polygon2D" parent="FG_polygons"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 12, -104, -96, -100, -96, -540, 112, -540, 104, -428, 64, -420, 12, -364 )

[node name="black4" type="Polygon2D" parent="FG_polygons"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 604, -424, 360, -420, 360, -488, 280, -488, 280, -420, 68, -424, 72, -544, 604, -540 )

[node name="black5" type="Polygon2D" parent="FG_polygons"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 496, -416, 500, -408, 428, -408, 432, -416 )

[node name="black6" type="Polygon2D" parent="FG_polygons"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 208, -416, 212, -408, 140, -408, 144, -416 )

[node name="Objects" type="Node2D" parent="."]

[node name="enemies" type="Node2D" parent="."]

[node name="cables" type="Node2D" parent="."]
z_index = -1
script = ExtResource( 20 )

[node name="Line2D" type="Line2D" parent="cables"]
points = PoolVector2Array( 44, -392, 64, -352 )
width = 2.5
width_curve = SubResource( 4 )
default_color = Color( 0, 0, 0, 0.352941 )

[node name="Line2D2" type="Line2D" parent="cables"]
points = PoolVector2Array( 596, -388, 548, -352 )
width = 2.5
width_curve = SubResource( 4 )
default_color = Color( 0, 0, 0, 0.352941 )

[node name="Line2D3" type="Line2D" parent="cables"]
points = PoolVector2Array( 44, -140, 96, -188 )
width = 2.5
width_curve = SubResource( 4 )
default_color = Color( 0, 0, 0, 0.352941 )

[node name="Line2D4" type="Line2D" parent="cables"]
points = PoolVector2Array( 608, -132, 572, -164 )
width = 2.5
width_curve = SubResource( 4 )
default_color = Color( 0, 0, 0, 0.352941 )

[node name="Boss_1" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, -244 )

[node name="door" parent="Boss_1" instance=ExtResource( 19 )]
position = Vector2( 17.3043, -181.566 )
rotation = 1.5708

[node name="CollisionShape2D" parent="Boss_1/door" index="0"]
position = Vector2( 0.5, -2.25 )
shape = SubResource( 5 )

[node name="crashing" parent="Boss_1/door" index="1"]
position = Vector2( 0.249969, -47.75 )

[node name="crashing2" parent="Boss_1/door" index="2"]
position = Vector2( 0.249969, -47.75 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boss_1/door"]
anims/open = SubResource( 6 )

[node name="CheckPoints" type="Node2D" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="CheckPoint" parent="CheckPoints" instance=ExtResource( 8 )]
position = Vector2( -458.205, -388.333 )

[node name="exit_portal" parent="." instance=ExtResource( 16 )]
position = Vector2( 320, -468 )
rotation = -1.5708
next_scene = ExtResource( 6 )
next_level = 11

[node name="in_portal" parent="." instance=ExtResource( 17 )]
position = Vector2( 598.441, -135.78 )
rotation = 3.92699

[editable path="player"]

[editable path="Boss_1"]

[editable path="Boss_1/door"]
